--- a/infrastructure/database-tools/base/pgadmin-deployment.yaml
+++ b/infrastructure/database-tools/base/pgadmin-deployment.yaml
@@ -25,24 +25,19 @@ spec:
         app.kubernetes.io/part-of: athlefi
         app.kubernetes.io/managed-by: kustomize
     spec:
+      # pgAdmin requires root access for proper operation
       securityContext:
-        runAsNonRoot: true
-        runAsUser: 5050
-        runAsGroup: 5050
-        fsGroup: 5050
+        runAsUser: 0
+        runAsGroup: 0
+        fsGroup: 0
       containers:
         - name: pgadmin
           image: dpage/pgadmin4:8.5
           securityContext:
-            runAsUser: 5050
-            runAsGroup: 5050
-            allowPrivilegeEscalation: false
+            runAsUser: 0
+            runAsGroup: 0
+            allowPrivilegeEscalation: true
             readOnlyRootFilesystem: false
-            capabilities:
-              drop:
-                - ALL
-            seccompProfile:
-              type: RuntimeDefault
           resources:
             requests:
               memory: "128Mi"
